# FilterService_v.2

./: .gitignore
libs/stc_fs/: CMakeLists.txt  Doxyfile
libs/stc_fs/docs/classes/: DirectoryMonitor.dox  IDirectoryMonitor.dox  IFileSystemSystemCalls.dox  InotifyMonitor.dox  NativeInotifySystemCalls.dox  PollingMonitor.dox
libs/stc_fs/docs/enumerations/: enum_directory_monitor_strategy.dox
libs/stc_fs/docs/examples/: example_basic_usage.dox  example_error_handling.dox  example_testing_with_mocks.dox
libs/stc_fs/docs/functions/: IFileSystemSystemCalls_destructor.dox  func_directory_monitor_create.dox  func_directory_monitor_create_with_strategy.dox  func_idirectory_monitor_destructor.dox  func_idirectory_monitor_start.dox  func_idirectory_monitor_stop.dox  func_ifile_system_system_calls_addwatch.dox  func_ifile_system_system_calls_close.dox  func_ifile_system_system_calls_init.dox  func_ifile_system_system_calls_read.dox  func_ifile_system_system_calls_removewatch.dox  func_ifile_system_system_calls_statfs.dox  func_inotify_monitor_constructor.dox  func_inotify_monitor_destructor.dox  func_inotify_monitor_get_exception.dox  func_inotify_monitor_start.dox  func_inotify_monitor_stop.dox  func_nativeinotify_system_calls_addwatch.dox  func_nativeinotify_system_calls_close.dox  func_nativeinotify_system_calls_destructor.dox  func_nativeinotify_system_calls_init.dox  func_nativeinotify_system_calls_read.dox  func_nativeinotify_system_calls_removewatch.dox  func_nativeinotify_system_calls_statfs.dox  func_polling_monitor_constructor.dox  func_polling_monitor_destructor.dox  func_polling_monitor_get_exception.dox  func_polling_monitor_run.dox  func_polling_monitor_start.dox  func_polling_monitor_stop.dox
libs/stc_fs/docs/pages/: page_architecture.dox  page_build_system.dox  page_testing.dox
libs/stc_fs/src/: directory_monitor.cpp  inotify_monitor.cpp  inotify_monitor.hpp  native_inotify_system_calls.cpp  native_inotify_system_calls.hpp  polling_monitor.cpp  polling_monitor.hpp
libs/stc_fs/tests/: CMakeLists.txt  directory_monitor_test.cpp  inotify_monitor_test.cpp  mock_system_calls.hpp  polling_monitor_test.cpp
libs/stc_logger/: 1.txt  CMakeLists.txt  Doxyfile
libs/stc_logger/docs/classes/: AsyncFileSink.dox  CircularRotationPolicy.dox  CompositeFilter.dox  ConsoleSink.dox  FileSink.dox  ILogFilter.dox  ILogFormatter.dox  ILogSink.dox  IRotationPolicy.dox  JsonFormatter.dox  LevelFilter.dox  SizeRotationPolicy.dox  SourceFilter.dox  TextFormatter.dox  TimeRotationPolicy.dox  XmlFormatter.dox  ilogger.dox  logger.dox
libs/stc_logger/docs/data_structures/: LogRecord.dox
libs/stc_logger/docs/enumerations/: LogLevel.dox  LogicOperations.dox  SourceMatchMode.dox  SourceMatchTarget.dox
libs/stc_logger/docs/examples/: example_async_highload.dox  example_basic_sync.dox  example_filtering.dox  example_rotation_circular.dox  example_rotation_size.dox  example_rotation_time.dox
libs/stc_logger/docs/functions/: AsyncFileSink_Constructor.dox  (+48 more)
libs/stc_logger/src/: logger.cpp
libs/stc_logger/tests/: CMakeLists.txt  filters_test.cpp  formatters_test.cpp  logger_test.cpp  rotation_policies_test.cpp
libs/stc_metrics_collector/tests/: CMakeLists.txt  metrics_registry_test.cpp  prometheus_exporter_test.cpp
libs/stc_signal_router/: CMakeLists.txt  Doxyfile  README.md
libs/stc_signal_router/src/: signal_router.cpp
libs/stc_signal_router/tests/: CMakeLists.txt  signal_router_test.cpp
src/lib-daemon-manager/: CMakeLists.txt  Doxyfile  README.md
src/lib-daemon-manager/src/: DaemonManager.cpp
src/lib-daemon-manager/tests/: DaemonManagertests.cpp  integration_tests.sh
src/lib-metric/: CMakeLists.txt
src/lib-metric/src/: MetricsCollector.cpp
src/lib-metric/tests/: MetricsCollectorTests.cpp
src/lib_signal-router/: CMakeLists.txt
src/lib_signal-router/src/: SignalRouter.cpp
src/lib_signal-router/tests/: SignalRouterIntegration.cpp  SignalRouterUtest.cpp
src/liblogger_v2/: CMakeLists.txt  README.md  main.cpp
src/liblogger_v2/cmake/: stclogger-config.cmake.in
src/liblogger_v2/src/: asyncfilelogger.cpp  basefilelogger.cpp  compositelogger.cpp  consolelogger.cpp  ilogger.cpp  syncfilelogger.cpp
src/liblogger_v2/tests/: asyncfilelogger_test.cpp  consolelogger_test.cpp  consoleloggertests.cpp  loggertests.cpp  syncfilelogger_test.cpp  timeformatter_test.cpp
src/service/: CMakeLists.txt  Doxyfile  SourceConf.json  a.out  config.json  config1.json
src/service/include/: AdapterFactory.hpp  FilterListManager.hpp  FtpFileAdapter.hpp  Ifilestorage.hpp  LocalStorageAdapter.hpp  SmbFileAdapter.hpp  XMLProcessor.hpp  adapterfabric.hpp  argumentparser.hpp  config_reload_transaction.hpp  configcache.hpp  configloader.hpp  configmanager.hpp  configvalidator.hpp  daemonizer.hpp  daemonmanager.hpp  enviromentprocessor.hpp  filestorageinterface.hpp  filewatcher.hpp  localfileadapter.hpp  logger_factory.hpp  logging_config.hpp  master.hpp  metricscollector.hpp  pid_file_manager.hpp  service_controller.hpp  signal_handler.hpp  signal_mask_guard.hpp  signalrouter.hpp  sourceconfig.hpp  worker.hpp  workercontainer.hpp
src/service/includes/: AdapterFabric.hpp  FileStorageInterface.hpp  LocalFileAdapter.hpp  filterservice.hpp  logger.hpp  master.hpp  service_controller.hpp  signal_handler.hpp
src/service/sources/: AdapterFabric.cpp  LocalFileAdapter.cpp  filterservice.cpp  logger.cpp  master.cpp  service_controller.cpp  signal_handler.cpp
src/service/src/: AdapterFactory.cpp  FilterListManager.cpp  FtpFileAdapter.cpp  LocalStorageAdapter.cpp  SmbFileAdapter.cpp  XMLProcessor.cpp  adapterfabric.cpp  argumentparser.cpp  config_reload_transaction.cpp  configcache.cpp  configloader.cpp  configmanager.cpp  configvalidator.cpp  daemonizer.cpp  daemonmanager.cpp  enviromentprocessor.cpp  filewatcher.cpp  filterservice.cpp  localfileadapter.cpp  logger_factory.cpp  master.cpp  metricscollector.cpp  pid_file_manager.cpp  service_controller.cpp  signal_handler.cpp  signalrouter.cpp  sourceconfig.cpp  worker.cpp  workercontainer.cpp
src/service/tests/: config.json  conftest.cpp
(+160 files in other folders)
